# PropSynth

./: .gitignore  README.md  pyproject.toml
propsynth/: oracle.py  tasks.py
tasks/merge_sorted/: meta.json  prompt.md  properties.py
tests/: test_oracle.py
