[project]
name = "propsynth"
version = "0.1.0"
description = "Property-test-driven code synthesis agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pytest>=8.0",
    "hypothesis>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
propsynth = "propsynth.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"